--- a/project4/network/templates/network/index.html
+++ b/project4/network/templates/network/index.html
@@ -10,6 +10,9 @@
             <input class="create-btn-form btn btn-primary" type="submit" value="Submit">            
             </form>
         </div>
+        <div id="allposts-div">
+            
+        </div>
     </div>
     <div id="following-page">
         <h3>Following Page</h3>
