profile page implemented

--- a/project4/network/templates/network/index.html
+++ b/project4/network/templates/network/index.html
@@ -19,11 +19,11 @@
     <div id="following-page">
         <h3>Following Page</h3>
     </div>
-    <div id="user-page">
-        <h3>{{request.user}} Page</h3>
-    </div>
     <div id="profile-page">
         <h3 id="profileTitle"></h3>
+        <div id="profile-followers"></div>
+        <div id="profile-following"></div>
+        <div id="profile-posts"></div>
     </div>
 {% endblock %}
 
