--- a/project4/network/templates/network/layout.html
+++ b/project4/network/templates/network/layout.html
@@ -21,7 +21,7 @@
                 {% endif %}  
                 {% if user.is_authenticated %}
                 <li class="nav-item">
-                    <button id="user" class="unstyle-btn nav-link"><strong>{{ user.username }}</strong></button>
+                    <button id="user" class="unstyle-btn nav-link">{{ user.username }}</button>
                 </li>
                 
                 <li class="nav-item">
