--- a/project4/network/templates/network/index.html
+++ b/project4/network/templates/network/index.html
@@ -3,6 +3,7 @@
 
 {% block body %}
     <div id="allposts-page">
+        <h3>All Posts</h3>
         {% if user.is_authenticated %}
         <div class="createpost-div">
             <form id="newpost-form">
@@ -17,11 +18,12 @@
         </div>
     </div>
     <div id="following-page">
-        <h3>Following Page</h3>
+        <h3>Following</h3>
+        <div id="following-posts-div"></div>
     </div>
     <div id="profile-page">
         <h3 id="profileTitle"></h3>
-        <button id="follow-btn"></button>
+        <button type="submit" id="follow-btn"></button>
         <div id="profile-followers"></div>
         <div id="profile-following"></div>
         <div id="profile-posts"></div>
