--- a/project4/network/templates/network/index.html
+++ b/project4/network/templates/network/index.html
@@ -28,6 +28,10 @@
         <div id="profile-following"></div>
         <div id="profile-posts"></div>
     </div>
+    <div class="pagination">
+        <button id="previousBtn">Previous</button>
+        <button id="nextBtn">Next</button>
+    </div>
 {% endblock %}
 
 {% block script %}
