--- a/project4/network/templates/network/index.html
+++ b/project4/network/templates/network/index.html
@@ -13,7 +13,7 @@
             </form>
         </div>
         {% endif %}
-        <div id="allposts-div">
+        <div id="all-posts-div">
             
         </div>
     </div>
@@ -26,7 +26,7 @@
         <button type="submit" id="follow-btn"></button>
         <div id="profile-followers"></div>
         <div id="profile-following"></div>
-        <div id="profile-posts"></div>
+        <div id="profile-posts-div"></div>
     </div>
     <div class="pagination">
         <button id="previousBtn">Previous</button>
