--- a/project4/network/templates/network/layout.html
+++ b/project4/network/templates/network/layout.html
@@ -1,13 +1,14 @@
 {% load static %}
+{% load sass_tags %}
 
 <!DOCTYPE html>
 <html lang="en">
     <head>
         <title>{% block title %}Social Network{% endblock %}</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-        <link href="{% static 'network/styles.css' %}" rel="stylesheet">
         {% block script %}
         {% endblock %}
+        <link href="{% sass_src 'network/styles.scss' %}" rel="stylesheet" type="text/css" />
     </head>
     <body>
         <nav id="main-navbar" class="navbar navbar-expand-lg navbar-light bg-light">
