--- a/project4/network/static/network/styles.scss
+++ b/project4/network/static/network/styles.scss
@@ -1,3 +1,5 @@
+@import './navbar';
+
 .unstyle-btn{
 	background: none;
 	color: inherit;
@@ -7,8 +9,5 @@
 	outline: inherit;
 }
 
-body{
-	background-color: black;
-}
 
 
