--- a/project4/network/static/network/_navbar.scss
+++ b/project4/network/static/network/_navbar.scss
@@ -1,3 +1,66 @@
-body{
-    background-color: blue;
+
+#nav-bar{
+    width: 5rem;
+    height: 100vh;
+    position: fixed;
+    background-color: $bg-primary;
+    transition: width 200ms ease;
+
+    
+    ul {
+        height: 100vh;
+        list-style: none;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        height: 100%;
+        
+        .nav-item{
+            width: 100%;
+            a, button{
+                display:flex;
+                align-items: center;
+                height: 5rem;
+                text-decoration: none;
+                color: $text-primary;
+                transition: 1000ms;
+                width: 100%;
+            
+                i{
+                    width: 2rem;
+                    min-width: 1.5rem;
+                    margin: 0 1.75rem;
+                }
+                
+                
+            }
+            a:hover, button:hover{
+                filter: grayscale(0%) opacity(1);
+                background: $bg-secondary;
+                color: $text-secondary; 
+            }
+        }
+        .nav-item:last-child{
+            margin-top: auto;
+            a{
+                i{
+                    margin: 0 1.75rem 0 2.2rem;
+                }
+            }
+        }
+
+    }
 }
+
+span.link-text{
+    display: none;
+}
+#nav-bar:hover {
+    width: 16rem;
+    .link-text{
+        display: inline;
+    }
+}
+
+
+
