--- a/project4/network/static/network/styles.css
+++ b/project4/network/static/network/styles.css
@@ -1,5 +1,6 @@
-body {
-  background-color: blue; }
+* {
+  padding: 0;
+  margin: 0; }
 
 .unstyle-btn {
   background: none;
@@ -8,5 +9,60 @@ body {
   font: inherit;
   cursor: pointer;
   outline: inherit; }
+
+:root {
+  font-size: 16px; }
+
+#nav-bar {
+  width: 5rem;
+  height: 100vh;
+  position: fixed;
+  background-color: #23232e;
+  transition: width 200ms ease; }
+  #nav-bar ul {
+    height: 100vh;
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 100%; }
+    #nav-bar ul .nav-item {
+      width: 100%; }
+      #nav-bar ul .nav-item a, #nav-bar ul .nav-item button {
+        display: flex;
+        align-items: center;
+        height: 5rem;
+        text-decoration: none;
+        color: #b6b6b6;
+        transition: 1000ms;
+        width: 100%; }
+        #nav-bar ul .nav-item a i, #nav-bar ul .nav-item button i {
+          width: 2rem;
+          min-width: 1.5rem;
+          margin: 0 1.75rem; }
+      #nav-bar ul .nav-item a:hover, #nav-bar ul .nav-item button:hover {
+        filter: grayscale(0%) opacity(1);
+        background: #141418;
+        color: #ececec; }
+    #nav-bar ul .nav-item:last-child {
+      margin-top: auto; }
+      #nav-bar ul .nav-item:last-child a i {
+        margin: 0 1.75rem 0 2.2rem; }
+
+span.link-text {
+  display: none; }
+
+#nav-bar:hover {
+  width: 16rem; }
+  #nav-bar:hover .link-text {
+    display: inline; }
+
+main {
+  margin-left: 5rem;
+  padding: 1rem;
+  transition: margin-left 200ms ease; }
+
+#nav-bar:hover + main {
+  margin-left: 16rem; }
 
 /*# sourceMappingURL=styles.css.map */
