--- a/project4/network/templates/network/layout.html
+++ b/project4/network/templates/network/layout.html
@@ -23,7 +23,7 @@
                 <li class="nav-item">
                     <button class="unstyle-btn" id="allposts">
                         <i class="fas fa-list-alt"></i>
-                        <span class="link-text">All Posts</span>
+                        <span class="link-text">Home Page</span>
                     </button>
                 </li>
                 <li class="nav-item">
