--- a/project4/network/static/network/partials/_navbar.scss
+++ b/project4/network/static/network/partials/_navbar.scss
@@ -25,7 +25,7 @@
                 color: $text-primary;
                 transition: 1000ms;
                 width: 100%;
-            
+                border-bottom: 1px solid $border-color;
                 i{
                     width: 2rem;
                     min-width: 1.5rem;
@@ -52,7 +52,7 @@
     }
 }
 
-span.link-text{
+.link-text{
     display: none;
 }
 #nav-bar:hover {
