--- a/project4/network/static/network/partials/_resets.scss
+++ b/project4/network/static/network/partials/_resets.scss
@@ -1,6 +1,7 @@
 *{
 	padding: 0;
-	margin: 0;
+    margin: 0;
+    box-sizing: border-box;
 }
 
 //Clear defalt Btns Style
@@ -13,13 +14,9 @@
     outline: inherit;
 }
 
-$text-primary: #b6b6b6;
-$text-secondary: #ececec;
-$bg-primary: #23232e;
-$bg-secondary: #141418;
-$transition-speed: 600ms;
+
 
 :root {
 	font-size: 16px;
 	
-  }
+}
