--- a/project4/network/static/network/styles.css
+++ b/project4/network/static/network/styles.css
@@ -1,6 +1,7 @@
 * {
   padding: 0;
-  margin: 0; }
+  margin: 0;
+  box-sizing: border-box; }
 
 .unstyle-btn {
   background: none;
@@ -35,7 +36,8 @@
         text-decoration: none;
         color: #b6b6b6;
         transition: 1000ms;
-        width: 100%; }
+        width: 100%;
+        border-bottom: 1px solid #38444d; }
         #nav-bar ul .nav-item a i, #nav-bar ul .nav-item button i {
           width: 2rem;
           min-width: 1.5rem;
@@ -49,7 +51,7 @@
       #nav-bar ul .nav-item:last-child a i {
         margin: 0 1.75rem 0 2.2rem; }
 
-span.link-text {
+.link-text {
   display: none; }
 
 #nav-bar:hover {
@@ -57,10 +59,62 @@ span.link-text {
   #nav-bar:hover .link-text {
     display: inline; }
 
+.title {
+  background-color: #23232e;
+  height: 5rem;
+  padding: 15px 5px;
+  border-bottom: #38444d 1px solid;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; }
+  .title h3 {
+    font-size: 2rem;
+    margin-left: 4rem; }
+
+#createpost-div {
+  padding: 50px;
+  background-color: #23232e;
+  border-bottom: 1px solid #38444d; }
+  #createpost-div #newpost-form {
+    display: flex;
+    flex-direction: column;
+    margin-right: 500px;
+    text-align: left;
+    height: 150px;
+    justify-content: center; }
+    #createpost-div #newpost-form textarea {
+      background-color: #23232e;
+      height: 80px;
+      margin-left: 2rem;
+      width: 400px;
+      border: none;
+      border-bottom: 1px solid #38444d;
+      border-right: 1px solid #38444d;
+      color: white; }
+    #createpost-div #newpost-form textarea::placeholder {
+      color: #6b99a6;
+      font-size: 1.5rem; }
+    #createpost-div #newpost-form .create-btn-form {
+      font-weight: 700;
+      background-color: #1da1f2;
+      width: 100px;
+      border-radius: 20px;
+      margin-left: 320px;
+      margin-top: 10px; }
+
+.posts-div {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px; }
+
 main {
   margin-left: 5rem;
-  padding: 1rem;
-  transition: margin-left 200ms ease; }
+  padding: 0rem;
+  transition: margin-left 200ms ease;
+  border-left: 1px solid #38444d;
+  height: 100%;
+  background-color: #192734;
+  color: white; }
 
 #nav-bar:hover + main {
   margin-left: 16rem; }
