--- a/project4/network/static/network/styles.scss
+++ b/project4/network/static/network/styles.scss
@@ -1,12 +1,20 @@
-@import './resets';
-@import './navbar';
+@import './partials/resets';
+@import './partials/variables';
+@import './partials/navbar';
+@import './partials/title';
+@import './partials/create-form';
+@import './partials/posts';
 
 
 
 main{
 	margin-left: 5rem;
-	padding: 1rem;
+	padding: 0rem;
 	transition: margin-left 200ms ease;
+	border-left: 1px solid $border-color;
+	height: 100%;
+	background-color: #192734;
+	color: white;
 }
 
 #nav-bar:hover + main{
