--- a/project4/network/static/network/partials/_navbar.scss
+++ b/project4/network/static/network/partials/_navbar.scss
@@ -5,7 +5,7 @@
     position: fixed;
     background-color: $bg-primary;
     transition: width 200ms ease;
-
+    color: white;
     
     ul {
         height: 100vh;
